Business SDK file changes done

--- a/findly-builder/src/app/components/result-templates/result-templates.component.html
+++ b/findly-builder/src/app/components/result-templates/result-templates.component.html
@@ -5,7 +5,7 @@
 
 <div class="search-interface-container">
   <div class="header_sec">
-    <div class="title">Templates</div>
+    <div class="title">Result Templates</div>
     <div class="right-side-copy-configs">
       <div class="kr-sg-dropdowns copy-config-dropdown" ngbDropdown [placement]="'bottom-right'">
         <div class="dropdown dropdown-open">
@@ -861,7 +861,7 @@
                         [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
                         <div class="classic-list-item">
                           <div class="img-block">
-                            <img src="assets/icons/resultTemplate/dummyimg.svg">
+                            <img src="assets/icons/resultTemplate/skelton-small.svg">
                           </div>
                           <div class="content_sec">
                             <div class="heading-">The All Rounder</div>
@@ -872,7 +872,7 @@
                         </div>
                         <div class="classic-list-item">
                           <div class="img-block">
-                            <img src="assets/icons/resultTemplate/dummyimg.svg">
+                            <img src="assets/icons/resultTemplate/skelton-small.svg">
                           </div>
                           <div class="content_sec">
                             <div class="heading-">The All Rounder</div>
@@ -895,7 +895,7 @@
                             <div class="heading-text">Heading comes here</div>
                             <div class="content_sec">
                               <div class="img-block">
-                                <img src="assets/icons/resultTemplate/dummylarge.svg">
+                                <img src="assets/icons/resultTemplate/skelton-large.svg">
                               </div>
                               <div class="text-desc">Description comes here, description comes here, description comes
                                 here, description comes here, description comes here, des cription comes here,
@@ -919,7 +919,7 @@
                         [ngClass]="{'text-center': templateDataBind.layout.textAlignment == 'center'}">
                         <div class="plain-list-item" *ngFor="let data of [0,1]">
                           <div class="img-block">
-                            <img src="assets/icons/resultTemplate/dummyimg.svg">
+                            <img src="assets/icons/resultTemplate/skelton-small.svg">
                           </div>
                           <div class="content_sec">
                             <div class="heading-">The All Rounder</div>
@@ -942,7 +942,7 @@
                             <div class="heading-text">Heading comes here</div>
                             <div class="content_sec">
                               <div class="img-block">
-                                <img src="assets/icons/resultTemplate/dummylarge.svg">
+                                <img src="assets/icons/resultTemplate/skelton-large.svg">
                               </div>
                               <div class="text-desc">Description comes here, description comes here, description comes
                                 here, description comes here, description comes here, des cription comes here,
@@ -965,7 +965,7 @@
                       <div class="template-4-classic-list-result col-11 mb-3">
                         <div class="classic-list-item-result" *ngFor="let data of [0,1]">
                           <div class="img-block">
-                            <img src="assets/icons/resultTemplate/dummyimg.svg">
+                            <img src="assets/icons/resultTemplate/skelton-small.svg">
                           </div>
                           <div class="content_sec">
                             <div class="heading-">The All Rounder</div>
@@ -990,7 +990,7 @@
                             <div class="heading-text">Heading comes here</div>
                             <div class="content_sec">
                               <div class="img-block">
-                                <img src="assets/icons/resultTemplate/dummylarge.svg">
+                                <img src="assets/icons/resultTemplate/skelton-large.svg">
                               </div>
                               <div class="text-desc">Description comes here, description comes here, description comes
                                 here, description comes here, description comes here, des cription comes here,
@@ -1016,7 +1016,7 @@
                       <div class="template-4-plain-list-result col-11 mb-3">
                         <div class="plain-list-item-result" *ngFor="let data of [0,1]">
                           <div class="img-block">
-                            <img src="assets/icons/resultTemplate/dummyimg.svg">
+                            <img src="assets/icons/resultTemplate/skelton-small.svg">
                           </div>
                           <div class="content_sec">
                             <div class="heading-">The All Rounder</div>
@@ -1041,7 +1041,7 @@
                             <div class="heading-text">Heading comes here</div>
                             <div class="content_sec">
                               <div class="img-block">
-                                <img src="assets/icons/resultTemplate/dummylarge.svg">
+                                <img src="assets/icons/resultTemplate/skelton-large.svg">
                               </div>
                               <div class="text-desc">Description comes here, description comes here, description comes
                                 here, description comes here, description comes here, des cription comes here,
@@ -1103,7 +1103,7 @@
                         <div class="title-main">Jackets to look for this winter</div>
                         <div class="img-with-text">
                           <div class="img-block">
-                            <img src="assets/icons/resultTemplate/dummyimg.svg">
+                            <img src="assets/icons/resultTemplate/skelton-small.svg">
                           </div>
                           <div class="info-text">Fitted styles are key to coat buying this winter so look for tailored
                             shapes that suit your body type. Belted coats are a great way to accentuate your waist even
@@ -1112,7 +1112,7 @@
                         </div>
                         <div class="img-with-text">
                           <div class="img-block">
-                            <img src="assets/icons/resultTemplate/dummyimg.svg">
+                            <img src="assets/icons/resultTemplate/skelton-small.svg">
                           </div>
                           <div class="info-text">Fitted styles are key to coat buying this winter so look for tailored
                             shapes that suit your body type. Belted coats are a great way to accentuate your waist even
@@ -1121,7 +1121,7 @@
                         </div>
                         <div class="img-with-text">
                           <div class="img-block">
-                            <img src="assets/icons/resultTemplate/dummyimg.svg">
+                            <img src="assets/icons/resultTemplate/skelton-small.svg">
                           </div>
                           <div class="info-text">Fitted styles are key to coat buying this winter so look for tailored
                             shapes that suit your body type. Belted coats are a great way to accentuate your waist even
@@ -1473,7 +1473,7 @@
                                 <div class="classic-list-item">
                                   <div class="img-with-heading">
                                     <div class="img-block">
-                                      <img src="assets/icons/resultTemplate/dummyimg.svg">
+                                      <img src="assets/icons/resultTemplate/skelton-small.svg">
                                     </div>
                                     <div class="heading-">Heading comes here. </div>
                                   </div>
@@ -1491,7 +1491,7 @@
                                 <div class="classic-list-item">
                                   <div class="img-with-heading">
                                     <div class="img-block">
-                                      <img src="assets/icons/resultTemplate/dummyimg.svg">
+                                      <img src="assets/icons/resultTemplate/skelton-small.svg">
                                     </div>
                                     <div class="heading-">Heading comes here. </div>
                                   </div>
@@ -1580,7 +1580,19 @@
                                   <div class="title-main">Heading comes here</div>
                                   <div class="img-with-text">
                                     <div class="img-block">
-                                      <img src="assets/icons/resultTemplate/dummyimg.svg">
+                                      <img src="assets/icons/resultTemplate/skelton-small.svg">
+                                    </div>
+                                    <div class="info-text">Men wardrobes there most special piecesa...</div>
+                                  </div>
+                                  <div class="img-with-text">
+                                    <div class="img-block">
+                                      <img src="assets/icons/resultTemplate/skelton-small.svg">
+                                    </div>
+                                    <div class="info-text">Men wardrobes there most special piecesa...</div>
+                                  </div>
+                                  <div class="img-with-text">
+                                    <div class="img-block">
+                                      <img src="assets/icons/resultTemplate/skelton-small.svg">
                                     </div>
                                     <div class="info-text">Men wardrobes there most special piecesa...</div>
                                   </div>
@@ -1590,10 +1602,10 @@
                           </div>
                           <div class="carousel-item">
                             <div class="template-6-classic-list row col-12 m-0 p-2">
-                              <div class="col-4 pl-1 pr-1" *ngFor="let data of [0,1,2]">
+                              <div class="col-4 pl-1 pr-1" *ngFor="let data1 of [0,1,2]">
                                 <div class="classic-list-item">
                                   <div class="title-main">Heading comes here</div>
-                                  <div class="img-with-text" *ngFor="let data of [0,1,2]">
+                                  <div class="img-with-text">
                                     <div class="img-block">
                                       <img src="assets/icons/resultTemplate/dummyimg.svg">
                                     </div>
