--- a/findly-builder/src/app/components/pricing/pricing.component.html
+++ b/findly-builder/src/app/components/pricing/pricing.component.html
@@ -147,9 +147,13 @@
                 <div class="card-desc">Scheduled Crawling</div>
                 <div class="card-desc">Experiments</div>
                 <div class="card-desc">Community Support</div> -->
-            <button class="kr-sg-button-secondary btn_lg"
+                <button class="kr-sg-button-secondary btn_lg"
+                (click)="enterpriseContactus()">{{("plan.contact_us"|
+                translate)}}</button>
+                <!-- Commented as part of FLY-3643 -->
+            <!-- <button class="kr-sg-button-secondary btn_lg"
               (click)="plan.name==='Enterprise'?enterpriseContactus():compare('order',plan)">{{plan.name==='Enterprise'?("plan.contact_us"|
-              translate):("plan.choose_plan"| translate)}}</button>
+              translate):("plan.choose_plan"| translate)}}</button> -->
           </div>
         </div>
 
