result ranking issue fixed

--- a/findly-builder/src/app/components/facets/facets.component.html
+++ b/findly-builder/src/app/components/facets/facets.component.html
@@ -378,7 +378,7 @@
                                                     <div class="dropdown dropdown-open">
                                                         <button class="dropdown-toggle dropdown-input"
                                                             data-toggle="dropdown"
-                                                            [class.err-block]="((!currentFacetObj?.sortConfig?.sortBy?.length) && submitted)">{{currentFacetObj.sortConfig.sortBy==''?'Select':currentFacetObj.sortConfig.sortBy}}</button>
+                                                            [class.err-block]="((!currentFacetObj?.sortConfig?.sortBy?.length) && submitted)">{{currentFacetObj.sortConfig.sortBy==''?'Select':(currentFacetObj.sortConfig.sortBy|titlecase)}}</button>
                                                         <ul class="dropdown-menu content-menu">
                                                             <perfect-scrollbar class="scroll-search-field h-200">
                                                                 <li (click)="currentFacetObj.sortConfig.sortBy='value'">
@@ -396,7 +396,7 @@
                                                         <button class="dropdown-toggle dropdown-input"
                                                             data-toggle="dropdown"
                                                             [class.err-block]="((!currentFacetObj?.sortConfig?.order?.length) && submitted)">{{currentFacetObj.sortConfig.order==''?'Select
-                                                            order':(currentFacetObj.sortConfig.order=='asc'?'ascending':'descending')}}</button>
+                                                            order':(currentFacetObj.sortConfig.order=='asc'?'Ascending':'Descending')}}</button>
                                                         <ul class="dropdown-menu content-menu">
                                                             <perfect-scrollbar class="scroll-search-field h-200">
                                                                 <li (click)="currentFacetObj.sortConfig.order='asc'">
@@ -520,7 +520,7 @@
                                                     <div class="dropdown dropdown-open">
                                                         <button class="dropdown-toggle dropdown-input"
                                                             data-toggle="dropdown"
-                                                            [class.err-block]="((!currentFacetObj?.sortConfig?.sortBy?.length) && submitted)">{{currentFacetObj.sortConfig.sortBy==''?'Select':currentFacetObj.sortConfig.sortBy}}</button>
+                                                            [class.err-block]="((!currentFacetObj?.sortConfig?.sortBy?.length) && submitted)">{{currentFacetObj.sortConfig.sortBy==''?'Select':(currentFacetObj.sortConfig.sortBy|titlecase)}}</button>
                                                         <ul class="dropdown-menu content-menu">
                                                             <perfect-scrollbar class="scroll-search-field h-200">
                                                                 <li (click)="currentFacetObj.sortConfig.sortBy='value'">
