--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -16116,7 +16116,7 @@ a.tile-heading{
     top: -2px;
     width: calc(100% - 35px);
 }
-.template-4-classic-list .classic-list-item .content_sec .heading- {
+.template-4-classic-list .classic-list-item .content_sec .heading {
     font-weight: 500;
     font-size: 14px;
     line-height: 20px;
