FLY-3728 issue fixed

--- a/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
+++ b/findly-builder/src/assets/web-kore-sdk/demo/findly/findly-sdk.css
@@ -17364,3 +17364,9 @@ a.tile-heading{
 .show-more-list {
     cursor: pointer;
 }
+.bodybg .isDevLoader, .isEndUserLoader{
+    display: none;
+}
+.isDevLoader,.bodybg .isEndUserLoader{
+display: block;
+}
